add icons and text content

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <i class="fas fa-moon"></i>
         </button>
         <section class="slideshow-container visible">
-          <h2>This, I like</h2>
+          <h2><i class="fas fa-heart"></i> This, I like</h2>
           <figure class="carouselPhoto visible">
             <img src="Images/Juggling.jpg" alt="Juggler" />
             <figcaption>
@@ -74,42 +74,73 @@
           <button class="carouselBtn" id="next">&#10095;</button>
         </section>
         <section class="content journey hidden">
-          <h2 class="innerTitle">My journey</h2>
+          <h2 class="innerTitle">
+            <i class="fas fa-shoe-prints"></i> My journey
+          </h2>
           <div class="text-container">
             <p>
               I was born in Italy and lived most of my life in a beautiful
-              village by the lake. I’ve always been a daydreamer and growing up
-              I’ve become an idealist and activist. I got my bachelor degree in
+              <a
+                href="https://en.wikipedia.org/wiki/Genzano_di_Roma"
+                target="_blank"
+                >village</a
+              >
+              by the lake. I’ve always been a daydreamer and growing up I’ve
+              become an idealist and activist. I got my bachelor degree in
               Development Studies with the hope to find my way in some
               Non-governmental organisations or Charities. Because of my total
               lack of knowledge of the English language I decided to move to
               London and stay for a short period of time in order to learn the
               language. Here I worked as a barista until I lost my job due to
-              the recent pandemic. During this year I’ve learnt how valuable is
-              to live in a multicultural society and I made some very good
+              the recent pandemic. During these years I’ve learnt how valuable
+              is to live in a multicultural society and I made some very good
               friends from every corner of the globe. And I’ve found the love of
               my life!
             </p>
           </div>
         </section>
         <section class="content coding hidden">
-          <h2 class="innerTitle">Coding</h2>
+          <h2 class="innerTitle"><i class="fas fa-laptop-code"></i> Coding</h2>
           <p>
             My first contact with coding was in the middle of the eighties when
             I was a child and me and my brother used to write some programmes in
-            Basic and run it on an MSX. During the high school I had the
-            opportunity to learn Turbo Pascal but by the time of the Uni I was
-            lost in Politics and Social Activism so I put my passion for coding
-            aside until a few months ago. Talking with my wife, who is a
-            developer, I told her of the passion I once had for coding and that
-            now I regret that I didn’t follow that path. She invited me to watch
-            some video tutorials and try freeCodeCamp. And now here we are!
-            Coding is my passion again and I would love to become a developer on
-            day!
+            <a href="https://en.wikipedia.org/wiki/BASIC" target="_blank"
+              >BASIC</a
+            >
+            and run it on
+            <a href="https://en.wikipedia.org/wiki/Commodore_64" target="_blank"
+              >Commodore 64</a
+            >. During the high school I had the opportunity to learn
+            <a href="https://en.wikipedia.org/wiki/Turbo_Pascal" target="_blank"
+              >Turbo Pascal</a
+            >
+            but by the time of the Uni I was lost in Politics and Social
+            Activism so I put my passion for coding aside until a few months
+            ago.
+          </p>
+
+          <p>
+            Talking with my wife, who is a developer, I told her of the passion
+            I once had for coding and that now I regret that I didn’t follow
+            that path. She invited me to watch some video tutorials and try
+            freeCodeCamp.
+          </p>
+          <p>
+            I followed her advice and... BOOM!! I was caught and I just can't
+            get enough! I believe that coding is a very powerful tool and if
+            used in the right way can make a huge difference in people's
+            everyday life. I also find coding as a pure form of expression, with
+            almost no boundaries or limits.
+          </p>
+          <p>
+            Here we are now! I'm dreaming to be a developer! Please don't wake
+            me up!!
           </p>
         </section>
         <section class="content fac hidden">
-          <h2 class="innerTitle">Why Founders And Coders?</h2>
+          <h2 class="innerTitle">
+            <i class="fas fa-shapes"></i> Why Founders And Coders?
+          </h2>
           <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad dolores
             voluptas hic aperiam sequi iste repellendus quibusdam est
@@ -118,7 +149,9 @@
           </p>
         </section>
         <section class="content contacts hidden">
-          <h2 class="innerTitle">Contacts</h2>
+          <h2 class="innerTitle">
+            <i class="far fa-address-book"></i> Contacts
+          </h2>
           <ul>
             <li>
               <i class="far fa-envelope"></i>
@@ -142,11 +175,21 @@
       <aside id="sidebar" class="fixed">
         <nav>
           <ul class="side-links-box">
-            <li id="home" class="sideList lightHover">This, I like</li>
-            <li id="journey" class="sideList lightHover">My journey</li>
-            <li id="coding" class="sideList lightHover">Coding</li>
-            <li id="fac" class="sideList lightHover">Why FAC</li>
-            <li id="contacts" class="sideList lightHover">Contacts</li>
+            <li id="home" class="sideList lightHover">
+              <i class="fas fa-heart"></i> This, I like
+            </li>
+            <li id="journey" class="sideList lightHover">
+              <i class="fas fa-shoe-prints"></i> My journey
+            </li>
+            <li id="coding" class="sideList lightHover">
+              <i class="fas fa-laptop-code"></i> Coding
+            </li>
+            <li id="fac" class="sideList lightHover">
+              <i class="fas fa-shapes"></i> Why FAC
+            </li>
+            <li id="contacts" class="sideList lightHover">
+              <i class="far fa-address-book"></i> Contacts
+            </li>
           </ul>
         </nav>
       </aside>
