--- a/index.html
+++ b/index.html
@@ -86,67 +86,100 @@
                 >village</a
               >
               by the lake. I’ve always been a daydreamer and growing up I’ve
-              become an idealist and activist. I got my bachelor degree in
-              Development Studies with the hope to find my way in some
-              Non-governmental organisations or Charities. Because of my total
-              lack of knowledge of the English language I decided to move to
-              London and stay for a short period of time in order to learn the
-              language. Here I worked as a barista until I lost my job due to
-              the recent pandemic. During these years I’ve learnt how valuable
-              is to live in a multicultural society and I made some very good
-              friends from every corner of the globe. And I’ve found the love of
-              my life!
+              become an idealist and activist.
+            </p>
+            <p>
+              I got my bachelor degree in Development Studies with the hope to
+              find my way in some Non-governmental organisations or Charities.
+            </p>
+            <p>
+              Because of my total lack of knowledge of the English language I
+              decided to move to London and stay for a short period of time in
+              order to learn the language. Here I worked as a barista until I
+              lost my job due to the recent pandemic.
+            </p>
+            <p>
+              During these years I’ve learnt how valuable is to live in a
+              multicultural society and I made some very good friends from every
+              corner of the globe. And I’ve found the love of my life!
             </p>
           </div>
         </section>
         <section class="content coding hidden">
           <h2 class="innerTitle"><i class="fas fa-laptop-code"></i> Coding</h2>
-          <p>
-            My first contact with coding was in the middle of the eighties when
-            I was a child and me and my brother used to write some programmes in
-            <a href="https://en.wikipedia.org/wiki/BASIC" target="_blank"
-              >BASIC</a
-            >
-            and run it on
-            <a href="https://en.wikipedia.org/wiki/Commodore_64" target="_blank"
-              >Commodore 64</a
-            >. During the high school I had the opportunity to learn
-            <a href="https://en.wikipedia.org/wiki/Turbo_Pascal" target="_blank"
-              >Turbo Pascal</a
-            >
-            but by the time of the Uni I was lost in Politics and Social
-            Activism so I put my passion for coding aside until a few months
-            ago.
-          </p>
+          <div class="text-container">
+            <p>
+              My first contact with coding was in the middle of the eighties
+              when I was a child and me and my brother used to write some
+              programmes in
+              <a href="https://en.wikipedia.org/wiki/BASIC" target="_blank"
+                >BASIC</a
+              >
+              and run it on
+              <a
+                href="https://en.wikipedia.org/wiki/Commodore_64"
+                target="_blank"
+                >Commodore 64</a
+              >. During the high school I had the opportunity to learn
+              <a
+                href="https://en.wikipedia.org/wiki/Turbo_Pascal"
+                target="_blank"
+                >Turbo Pascal</a
+              >
+              but by the time of the Uni I was lost in Politics and Social
+              Activism so I put my passion for coding aside until a few months
+              ago.
+            </p>
 
-          <p>
-            Talking with my wife, who is a developer, I told her of the passion
-            I once had for coding and that now I regret that I didn’t follow
-            that path. She invited me to watch some video tutorials and try
-            freeCodeCamp.
-          </p>
-          <p>
-            I followed her advice and... BOOM!! I was caught and I just can't
-            get enough! I believe that coding is a very powerful tool and if
-            used in the right way can make a huge difference in people's
-            everyday life. I also find coding as a pure form of expression, with
-            almost no boundaries or limits.
-          </p>
-          <p>
-            Here we are now! I'm dreaming to be a developer! Please don't wake
-            me up!!
-          </p>
+            <p>
+              Talking with my wife, who is a developer, I told her of the
+              passion I once had for coding and that now I regret that I didn’t
+              follow that path. She invited me to watch some video tutorials and
+              try freeCodeCamp.
+            </p>
+            <p>
+              I followed her advice and... BOOM!! I was caught and I just can't
+              get enough! I believe that coding is a very powerful tool and if
+              used in the right way can make a huge difference in people's
+              everyday life. I also find coding as a pure form of expression,
+              with almost no boundaries or limits.
+            </p>
+            <p>
+              Here we are now! I'm dreaming to be a developer! Please don't wake
+              me up!!
+            </p>
+          </div>
         </section>
         <section class="content fac hidden">
           <h2 class="innerTitle">
             <i class="fas fa-shapes"></i> Why Founders And Coders?
           </h2>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad dolores
-            voluptas hic aperiam sequi iste repellendus quibusdam est
-            reprehenderit eius placeat saepe nihil tempora autem at a, illo aut
-            nulla!
-          </p>
+          <div class="text-container">
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad
+              dolores voluptas hic aperiam sequi iste repellendus quibusdam est
+              reprehenderit eius placeat saepe nihil tempora autem at a, illo
+              aut nulla!
+            </p>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad
+              dolores voluptas hic aperiam sequi iste repellendus quibusdam est
+              reprehenderit eius placeat saepe nihil tempora autem at a, illo
+              aut nulla!
+            </p>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad
+              dolores voluptas hic aperiam sequi iste repellendus quibusdam est
+              reprehenderit eius placeat saepe nihil tempora autem at a, illo
+              aut nulla!
+            </p>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad
+              dolores voluptas hic aperiam sequi iste repellendus quibusdam est
+              reprehenderit eius placeat saepe nihil tempora autem at a, illo
+              aut nulla!
+            </p>
+          </div>
         </section>
         <section class="content contacts hidden">
           <h2 class="innerTitle">
