--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
       src="https://kit.fontawesome.com/34b0f0d8d7.js"
       crossorigin="anonymous"
     ></script>
-    <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
   </head>
   <body>
     <div class="container">
@@ -109,13 +108,13 @@
           <h2 class="innerTitle"><i class="fas fa-laptop-code"></i> Coding</h2>
           <div class="text-container">
             <p>
-              My first contact with coding was in the middle of the eighties
-              when I was a child and me and my brother used to write some
+              My first contact with coding happened in the middle of the
+              eighties when I was a child and with my brother used to write some
               programmes in
               <a href="https://en.wikipedia.org/wiki/BASIC" target="_blank"
                 >BASIC</a
               >
-              and run it on
+              and run them on
               <a
                 href="https://en.wikipedia.org/wiki/Commodore_64"
                 target="_blank"
@@ -188,18 +187,21 @@
           <ul>
             <li>
               <i class="far fa-envelope"></i>
-              <a href="mailto:danilocupido@gmail.com">danilocupido@gmail.com</a>
+              <a href="mailto:danilocupido@gmail.com">
+                danilocupido@gmail.com</a
+              >
             </li>
             <li>
               <i class="fas fa-mobile-alt"></i>
-              <a href="tel:00447818910600">+44 (0) 7818910600</a>
+              <a href="tel:00447818910600"> +44(0)7818910600</a>
             </li>
             <li>
               <i class="fab fa-linkedin-in"></i>
               <a
                 href="https://www.linkedin.com/in/danilocupido/"
                 target="_blank"
-                >linkedin</a
+              >
+                linkedin</a
               >
             </li>
           </ul>
@@ -241,12 +243,7 @@
               class="footerList"
               href="https://www.codewars.com/users/danilo-cupido"
               target="_blank"
-              ><span
-                class="iconify"
-                data-icon="cib:codewars"
-                data-height="30px"
-                data-inline="false"
-              ></span
+              ><i class="fas fa-fan"></i
             ></a>
           </li>
           <li id="freecodecamp">
