add text content

--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
           </h2>
           <div class="text-container">
             <p>
+              Hello everyone! My name is Danilo (he/him) and this is my story!
+            </p>
+            <p>
               I was born in Italy and lived most of my life in a beautiful
               <a
                 href="https://en.wikipedia.org/wiki/Genzano_di_Roma"
@@ -93,14 +96,18 @@
             </p>
             <p>
               Because of my total lack of knowledge of the English language I
-              decided to move to London and stay for a short period of time in
-              order to learn the language. Here I worked as a barista until I
-              lost my job due to the recent pandemic.
+              planned to move to London and stay for (what it was meant to be) a
+              short period of time in order to learn the language. There I
+              worked as a barista until I lost my job due to the recent
+              pandemic.
             </p>
             <p>
               During these years I’ve learnt how valuable is to live in a
               multicultural society and I made some very good friends from every
-              corner of the globe. And I’ve found the love of my life!
+              corner of the globe. And I’ve found the
+              <a href="Images/Jihyun_and_Danilo.JPG" target="_blank"
+                >Love of my life!</a
+              >
             </p>
           </div>
         </section>
@@ -109,8 +116,11 @@
           <div class="text-container">
             <p>
               My first contact with coding happened in the middle of the
-              eighties when I was a child and with my brother used to write some
-              programmes in
+              eighties when I was a child and
+              <a href="Images/Enzo_and_Danilo.JPG" target="_blank"
+                >with my brother</a
+              >
+              used to write some programmes in
               <a href="https://en.wikipedia.org/wiki/BASIC" target="_blank"
                 >BASIC</a
               >
@@ -131,17 +141,17 @@
             </p>
 
             <p>
-              Talking with my wife, who is a developer, I told her of the
+              Talking with my partner, who is a developer, I told about the
               passion I once had for coding and that now I regret that I didn’t
-              follow that path. She invited me to watch some video tutorials and
-              try freeCodeCamp.
+              follow that path. They invited me to watch some video tutorials
+              and try freeCodeCamp.
             </p>
             <p>
-              I followed her advice and... BOOM!! I was caught and I just can't
-              get enough! I believe that coding is a very powerful tool and if
-              used in the right way can make a huge difference in people's
-              everyday life. I also find coding as a pure form of expression,
-              with almost no boundaries or limits.
+              I followed their advice and... BOOM!! I was caught and I just
+              can't get enough! I believe that coding is a very powerful tool
+              and if used in the right way can make a huge difference in
+              people's everyday life. I also find coding as a pure form of
+              expression, with almost no boundaries or limits.
             </p>
             <p>
               Here we are now! I'm dreaming to be a developer! Please don't wake
@@ -155,28 +165,40 @@
           </h2>
           <div class="text-container">
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad
-              dolores voluptas hic aperiam sequi iste repellendus quibusdam est
-              reprehenderit eius placeat saepe nihil tempora autem at a, illo
-              aut nulla!
+              I've come across Founders and Coders thanks to my partner, who
+              took part on FAC Cohort 20. They told me how functional is the
+              peer-led learning system.
+            </p>
+
+            <p>
+              The values of cooperation, inclusion and social impact at the core
+              of Founders and Coders are one the main reasons behind my decision
+              to apply to the next cohort. I've struggled most of my life to
+              find a way to include my personal values and my academic studies
+              into a potential career.
             </p>
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad
-              dolores voluptas hic aperiam sequi iste repellendus quibusdam est
-              reprehenderit eius placeat saepe nihil tempora autem at a, illo
-              aut nulla!
+              As a white man I'm conscious to have privileges that are denied to
+              other groups of people and I appreciate that FAC wants to help,
+              and wants us to help, to change this. I find the guide on
+              <a href="https://guidetoallyship.com/" target="_blank"
+                >how to be a good ally</a
+              >
+              a remarkable tool!
             </p>
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad
-              dolores voluptas hic aperiam sequi iste repellendus quibusdam est
-              reprehenderit eius placeat saepe nihil tempora autem at a, illo
-              aut nulla!
+              Being part of the Discord community, attending the coaching
+              sessions and the meetups, working on the daily challenges have
+              boost my interest and willing to be a member of the next cohort.
+              I've learned and improved so much and I would love to continue
+              this growth.
             </p>
+
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad
-              dolores voluptas hic aperiam sequi iste repellendus quibusdam est
-              reprehenderit eius placeat saepe nihil tempora autem at a, illo
-              aut nulla!
+              As well as the opportunity to be a mentor for the future cohorts
+              and have the chance to give back and help others in their learning
+              is something that makes me think that this is the right place for
+              me.
             </p>
           </div>
         </section>
