add photo in the journey page fix contacts style and media query adjust

--- a/index.html
+++ b/index.html
@@ -77,38 +77,41 @@
             <i class="fas fa-shoe-prints"></i> My journey
           </h2>
           <div class="text-container">
-            <p>
-              Hello everyone! My name is Danilo (he/him) and this is my story!
-            </p>
-            <p>
-              I was born in Italy and lived most of my life in a beautiful
-              <a
-                href="https://en.wikipedia.org/wiki/Genzano_di_Roma"
-                target="_blank"
-                >village</a
-              >
-              by the lake. I’ve always been a daydreamer and growing up I’ve
-              become an idealist and activist.
-            </p>
-            <p>
-              I got my bachelor degree in Development Studies with the hope to
-              find my way in some Non-governmental organisations or Charities.
-            </p>
-            <p>
-              Because of my total lack of knowledge of the English language I
-              planned to move to London and stay for (what it was meant to be) a
-              short period of time in order to learn the language. There I
-              worked as a barista until I lost my job due to the recent
-              pandemic.
-            </p>
-            <p>
-              During these years I’ve learnt how valuable is to live in a
-              multicultural society and I made some very good friends from every
-              corner of the globe. And I’ve found the
-              <a href="Images/Jihyun_and_Danilo.JPG" target="_blank"
-                >Love of my life!</a
-              >
-            </p>
+            <div>
+              <p>
+                Hello everyone! My name is Danilo (he/him) and this is my story!
+              </p>
+              <p>
+                I was born in Italy and lived most of my life in a beautiful
+                <a
+                  href="https://en.wikipedia.org/wiki/Genzano_di_Roma"
+                  target="_blank"
+                  >village</a
+                >
+                by the lake. I’ve always been a daydreamer and growing up I’ve
+                become an idealist and activist.
+              </p>
+              <p>
+                I got my bachelor degree in Development Studies with the hope to
+                find my way in some Non-governmental organisations or Charities.
+              </p>
+              <p>
+                Because of my total lack of knowledge of the English language I
+                planned to move to London and stay for (what it was meant to be)
+                a short period of time in order to learn the language. There I
+                worked as a barista until I lost my job due to the recent
+                pandemic.
+              </p>
+              <p>
+                During these years I’ve learnt how valuable is to live in a
+                multicultural society and I made some very good friends from
+                every corner of the globe. And I’ve found the Love of my life!
+              </p>
+            </div>
+            <img
+              src="Images/Jihyun_and_Danilo.JPG"
+              alt="Jihyun and Danilo on the snow"
+            />
           </div>
         </section>
         <section class="content coding hidden">
